fixed visible area of single-screening component

--- a/ticket-reservation-app/src/app/cinema/components/single-screening/single-screening.component.scss
+++ b/ticket-reservation-app/src/app/cinema/components/single-screening/single-screening.component.scss
@@ -19,21 +19,30 @@ h2 {
 
 .container {
   /*border: 5px solid;*/
-  position: absolute;
+  /*position: absolute;
   top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
-  text-align: center;
+  text-align: center;*/
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  text-align: center;
   .auditorium {
-    margin-left: 37%;
+    margin: 0 auto;
+    max-width: 350px;
+    width: 100%;
+
   }
 
   ol {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 ;
+    margin-left: 18%;
   }
 
   .row {
@@ -57,7 +66,7 @@ h2 {
     }
   }
 
-  label {
+  .seat-label {
     display: block;
     position: relative;
     width: 100%;
@@ -175,7 +184,7 @@ button {
   /*margin: 1em 0 1em 0;*/
   max-width: 270px;
   /*position: relative;*/
-  margin-left: 40%;
+  //margin-left: 40%;
 
   input {
     font-size: 100%;
@@ -188,5 +197,20 @@ button {
   }
   .personal-details {
     padding-top: 5px;
+  }
+
+  #companyIndustry label {
+    display: block;
+    margin-bottom: 5px; /* Add some space between label and select */
+  }
+
+  #companyIndustry select {
+    font-size: 100%;
+    padding: 0.8em;
+    outline: none;
+    border: 2px solid rgb(200, 200, 200);
+    background-color: transparent;
+    border-radius: 20px;
+    width: 100%;
   }
 }
